#S06P22A105-151 :sparkles: Feat: Add edit nickname
