# backend/src/routes/user-router.ts
@@ -96,77 +96,23 @@ router.put("/withdraw", async (req, res, next) => {
   }
 });
 
+router.put("/edit/nickname", async (req, res, next) => {
+  console.log("start edit nickname... ");
+  const userSeq = req.body.userSeq;
+  const newNickname = req.body.userNickname;
+  // console.log("userSeq: ", userSeq, "| input nickname: ", newNickname);
+  try {
+    const savedNickName = await userService.checkNickname(newNickname);
+    if (savedNickName) {
+      res.status(404).json({ error: "존재하는 닉네임입니다." });
+      return;
+    } else {
+      userService.editNickname(userSeq, newNickname);
+      return res.status(200).json("닉네임 변경 성공");
+    }
+  } catch (error) {
+    return;
+  }
+});
+
 export default router;
-
-// /* eslint-disable @typescript-eslint/no-unsafe-argument */
-// /* eslint-disable @typescript-eslint/no-misused-promises */
-// import StatusCodes from "http-status-codes";
-// import { Request, Response, Router } from "express";
-
-// // import userService from "@services/user-service";
-// import { ParamMissingError } from "@shared/errors";
-
-// // Constants
-// const router = Router();
-// const { CREATED, OK } = StatusCodes;
-
-// // Paths
-// export const p = {
-//   get: "/all",
-//   add: "/add",
-//   update: "/update",
-//   delete: "/delete/:id",
-// } as const;
-
-// /**
-//  * Get all users.
-//  */
-// router.get(p.get, async (_: Request, res: Response) => {
-//   const users = await userService.getAll();
-//   return res.status(OK).json({ users });
-// });
-
-// /**
-//  * Add one user.
-//  */
-// router.post(p.add, async (req: Request, res: Response) => {
-//   const { user } = req.body;
-//   // Check param
-//   if (!user) {
-//     throw new ParamMissingError();
-//   }
-//   // Fetch data
-//   await userService.addOne(user);
-//   return res.status(CREATED).end();
-// });
-
-// /**
-//  * Update one user.
-//  */
-// router.put(p.update, async (req: Request, res: Response) => {
-//   const { user } = req.body;
-//   // Check param
-//   if (!user) {
-//     throw new ParamMissingError();
-//   }
-//   // Fetch data
-//   await userService.updateOne(user);
-//   return res.status(OK).end();
-// });
-
-// /**
-//  * Delete one user.
-//  */
-// router.delete(p.delete, async (req: Request, res: Response) => {
-//   const { id } = req.params;
-//   // Check param
-//   if (!id) {
-//     throw new ParamMissingError();
-//   }
-//   // Fetch data
-//   await userService.delete(Number(id));
-//   return res.status(OK).end();
-// });
-
-// // Export default
-// export default router;
